# media-depot

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  cli.py  docker-compose.yml  models.py  pyproject.toml  worker.py
alembic/: env.py
app/: config.py  db.py  main.py  models.py  utils.py  workers.py
app/handlers/: BaseHandler.py  BilibiliHandler.py  DouyinHandler.py  InsHandler.py  XhsHandler.py  __init__.py
app/models/: __init__.py  account.py  creator.py  enums.py  job.py  media_asset.py  platform.py  post.py  post_media.py
app/routers/: __init__.py  api.py  downloads.py  media.py  posts.py
app/schemas/: __init__.py  account.py  creator.py  job.py  media_asset.py  platform.py  post.py  post_media.py
app/static/: app.js  index.html  style.css
app/templates/: index.html
app/utils/: __init__.py  db.py  download.py  fixes.py  helpers.py  queue.py
handlers/: DouyinHandler.py  YoutubeHandler.py  __init__.py  handler_factory.py
