[project]
name = "media-depot"
version = "0.1.0"
description = "Central depot for your favorite media content"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.125.0",
    "httpx>=0.28.1",
    "psycopg>=3.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "rq>=2.6.1",
    "sqlalchemy>=2.0.45",
    "tqdm>=4.67.1",
    "yt-dlp>=2025.12.8",
]
